@@ -1,3 +1,9 @@
+Fri Aug 08 20:05:55 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimBListWindow.cpp:
+	  - Added confirmation dialogs and support for deleting buddies,
+	    chats, and groups.
+
 Fri Aug 08 19:22:21 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaim.h:
